<resources>
    <string name="app_name">CV</string>
    <string name="home">Home</string>
    <string name="education">Education</string>
    <string name="experiences">Experiences</string>
    <string name="projects">Projects</string>
    <string name="location">Location</string>
    <string name="location_copied_to_clipboard">Location copied to clipboard</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="full_professional_proficiency">Full Professional Proficiency</string>
    <string name="spanish">Spanish</string>
    <string name="elementary_proficiency">Elementary Proficiency</string>
    <string name="french">French</string>
    <string name="yoruba">Yoruba</string>
    <string name="limited_working_proficiency">Limited Working Proficiency</string>
    <string name="android_architecture_components">Android Architecture Components</string>
    <string name="online_syncing_and_caching">Online Syncing and Caching</string>
    <string name="bsc_computer_science">BSc Computer Science</string>
    <string name="lagos_state_university">Lagos State University</string>
    <string name="arkounting_business_concepts">Arkounting Business Concepts</string>
    <string name="android_developer_intern">Android Developer Intern</string>
    <string name="about_arkounting">A financial advisory and management consulting firm which provides outsourced financial services to small and medium scale businesse</string>
    <string name="arkounting_achievement_1">Implemented external payment processing APIs.</string>
    <string name="arkounting_achievement_2">Worked with external data sources and APIs.</string>
    <string name="arkounting_achievement_3">Worked with a team in developing an android application.</string>
    <string name="achievements_tasks">Achievements/Tasks</string>
    <string name="_01_2022_10_2022">01/2022 - 10/2022</string>
    <string name="about_2fa">A kotlin Android app that generates Time-based One-Time Passwords (TOTP) for authentication from a 32-bit secret key.</string>
    <string name="about_bill_reminder">A Kotlin Android app that implements Room Database to store bill details, Alarm Manager to schedule alarm reminders, and Google\'s Material You design language</string>
    <string name="about_typicode">A kotlin Android app that uses Retrofit to get JSON data from Typicode\'s API, stores the data in a local Room Database, and implements MVVM Architecture with the Database being the single source of truth</string>
    <string name="about_notes_app">A Kotlin Android app that implements Material Design and stores formatted notes in a local Room Database</string>
    <string name="about_google_maps">A kotlin android app that uses Google Maps API to locate and navigate to predefined locations</string>
    <string name="_01_2019_present">01/2019 - Present</string>
    <string name="courses">Courses</string>
    <string name="object_oriented_nprogramming_c">Object Oriented\nProgramming (C++)</string>
    <string name="object_oriented_nprogramming_java">Object Oriented\nProgramming (Java)</string>
    <string name="database_management_nsystem">Database Management\nSystem</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="human_computer_ninterface">Human Computer\nInterface</string>
    <string name="discrete_mathematics">Discrete Mathematics</string>
    <string name="algorithm_and_it_s_ncomplexity">Algorithm and it\'s\nComplexity</string>
    <string name="data_structures_and_nalgorithm">Data Structures and\nAlgorithm</string>
    <string name="android_mobile_developer">Android Mobile Developer</string>
    <string name="a_self_taught_android_developer_passionate_about_android_and_the_world_of_kotlin">A self-taught android developer passionate about android and the world of kotlin</string>
    <string name="lagos_nigeria">Lagos, Nigeria</string>
    <string name="skills">Skills</string>
    <string name="problem_solving">Problem Solving</string>
    <string name="_2fa_07_2022_07_2022">2FA (07/2022 - 07/2022)</string>
    <string name="bill_reminder_07_2022_08_2022">Bill Reminder (07/2022 - 08/2022)</string>
    <string name="typicode_demo_01_2022_01_2022">Typicode Demo (01/2022 - 01/2022)</string>
    <string name="notes_app_09_2021_12_2021">Notes App (09/2021 - 12/2021)</string>
    <string name="google_maps_demo_01_2022_01_2022">Google Maps Demo (01/2022 - 01/2022)</string>
    <string name="mvvm_clean_architecture">MVVM/Clean Architecture</string>

</resources>