<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".fragments.ProjectsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2FA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="7dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv2FA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/_2fa_07_2022_07_2022"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvAbout2FA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv2FA"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/about_2fa"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardBillReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card2FA"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="7dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvBillReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/bill_reminder_07_2022_08_2022"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvAboutBillReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvBillReminder"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/about_bill_reminder"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTypicode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardBillReminder"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="7dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTypicode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/typicode_demo_01_2022_01_2022"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvAboutTypicode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTypicode"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/about_typicode"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardNotesApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardTypicode"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="7dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvNotesApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/notes_app_09_2021_12_2021"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvAboutNotesApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNotesApp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/about_notes_app"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardGoogleMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardNotesApp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="7dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvGoogleMaps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/google_maps_demo_01_2022_01_2022"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvAboutGoogleMaps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvGoogleMaps"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/about_google_maps"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</ScrollView>